--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     
@@ -19,8 +19,45 @@
   </head>
   <body>
 
+    <!-- Navigation -->
 
-      <footer>
+    <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Gwen</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Fundraising</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Jumbotron-->
+
+    <div class="jumbotron">
+      <h2 class="introduction">Introductory Blurb Sebtence goes here. <br>
+      All about Gwen, why and how in one handy dandy sentence or two here.</h2>
+      <div class="down-arrow">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+      </div>
+    </div>
+
+    <a href="http://placeholder.com"><img class="img-fluid" src="http://via.placeholder.com/500x300"></a>
+
+
+    <footer>
         
     </footer>
   
@@ -29,7 +66,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/filter.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
