feat(html, css): create accordion style menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,100 @@
       </div>
     </div>
 
-    <a href="http://placeholder.com"><img class="img-fluid" src="http://via.placeholder.com/500x300"></a>
+    <div>
+        <img class="img-fluid" src="http://via.placeholder.com/500x300">
+        <!-- Accordion Menu-->
+        <div class="myAcc">
+            <div class="card">
+                <div class="card-header portfolio-snippets">
+                    <div>
+                        <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
+                            <h3 class="card-p">Trees</h3>
+                        </a>
+                    </div>
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                </div>
+                <div id="c1" class="collapse">
+                    <div class="card-block">
+                        <ul>
+                            <li>Nuit Blanche</li>
+                            <li>Conservation Area</li>
+                            <li>Strife</li>
+                            <li>Meadow</li>
+                            <li>Marked with an X</li>
+                            <li>Trees in Flood</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header portfolio-snippets">
+                    <div>
+                        <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
+                            <h3 class="card-p">Water</h3>
+                        </a>
+                    </div>
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                </div>
+                <div id="c2" class="collapse">
+                    <div class="card-block">
+                        <ul>
+                            <li>Nuit Blanche</li>
+                            <li>Conservation Area</li>
+                            <li>Strife</li>
+                            <li>Meadow</li>
+                            <li>Marked with an X</li>
+                            <li>Trees in Flood</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header portfolio-snippets">
+                    <div>
+                        <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
+                            <h3 class="card-p">Arctic</h3>
+                        </a>
+                    </div>
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                </div>
+                <div id="c3" class="collapse">
+                    <div class="card-block">
+                        <ul>
+                            <li>Nuit Blanche</li>
+                            <li>Conservation Area</li>
+                            <li>Strife</li>
+                            <li>Meadow</li>
+                            <li>Marked with an X</li>
+                            <li>Trees in Flood</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header portfolio-snippets">
+                    <div>
+                        <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
+                            <h3 class="card-p">Forest Floor</h3>
+                        </a>
+                    </div>
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                </div>
+                <div id="c4" class="collapse">
+                    <div class="card-block">
+                        <ul>
+                            <li>Nuit Blanche</li>
+                            <li>Conservation Area</li>
+                            <li>Strife</li>
+                            <li>Meadow</li>
+                            <li>Marked with an X</li>
+                            <li>Trees in Flood</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
