--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
     <!-- Jumbotron-->
 
     <div class="jumbotron">
-      <h2 class="introduction">Introductory Blurb Sebtence goes here. <br>
+      <h2 class="introduction">Introductory blurb sentence goes here. <br>
       All about Gwen, why and how in one handy dandy sentence or two here.</h2>
       <div class="down-arrow">
         <i class="fa fa-arrow-down" aria-hidden="true"></i>
       </div>
     </div>
 
-    <div>
+    <!-- Portfolio Section-->
+    
+    <section>
         <img class="img-fluid" src="http://via.placeholder.com/500x300">
         <!-- Accordion Menu-->
         <div class="myAcc">
@@ -65,7 +67,9 @@
                             <h3 class="card-p">Trees</h3>
                         </a>
                     </div>
-                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
+                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div id="c1" class="collapse">
                     <div class="card-block">
@@ -87,7 +91,9 @@
                             <h3 class="card-p">Water</h3>
                         </a>
                     </div>
-                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
+                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div id="c2" class="collapse">
                     <div class="card-block">
@@ -109,7 +115,9 @@
                             <h3 class="card-p">Arctic</h3>
                         </a>
                     </div>
-                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
+                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div id="c3" class="collapse">
                     <div class="card-block">
@@ -131,7 +139,9 @@
                             <h3 class="card-p">Forest Floor</h3>
                         </a>
                     </div>
-                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
+                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div id="c4" class="collapse">
                     <div class="card-block">
@@ -147,7 +157,52 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Fundraising Section-->
+
+    <section class="fundraising container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <h2>Fundraising</h2>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                <h3>I support ecological causes through my work wherever possible. Causes dear to my heart are:</h3>
+                <ul>
+                    <li>The Ottawa Riverkeeper</li>
+                    <li>Tree Ottawa</li>
+                    <li>The Nature Conservative of Canada</li>
+                    <li>The Mississippi Madawaska Land Trust</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quote-->
+
+    <section class="jumbotron jumbotron-fluid quote-img">
+      <div class="container">
+        <figure>
+            <h3>I have always loved that collision point of nature with the desire to create art.</h3>
+            <figcaption>— Frances Mayes</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <!-- About Gwen -->
+
+    <section class="container about">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <h2>About Gwen</h2>
+                <p>I am an eco-artist, a chronicler of the natural world. I believe making art that calls forth the viewer’s deepest memories connected with water, land, sky, and forest is my highest calling.</p>  
+                <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
