style(html, css): make the layout more visually pleasing

--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
 
     <section class="fundraising container">
         <div class="row">
-            <div class="col-sm-12 col-lg-3">
+            <div class="col-sm-12 col-lg-3 border-right">
                 <h2>Fundraising</h2>
             </div>
-            <div class="col-sm-12 col-lg-9">
+            <div class="col-sm-12 offset-lg-1 col-lg-8">
                 <h3>I support ecological causes through my work wherever possible. Causes dear to my heart are:</h3>
                 <ul>
-                    <li>The Ottawa Riverkeeper</li>
-                    <li>Tree Ottawa</li>
-                    <li>The Nature Conservative of Canada</li>
-                    <li>The Mississippi Madawaska Land Trust</li>
+                    <li><a href="#">The Ottawa Riverkeeper</a></li>
+                    <li><a href="#">Tree Ottawa</a></li>
+                    <li><a href="#">The Nature Conservative of Canada</a></li>
+                    <li><a href="#">The Mississippi Madawaska Land Trust</a></li>
                 </ul>
             </div>
         </div>
@@ -182,9 +182,11 @@
 
     <section class="jumbotron jumbotron-fluid quote-img">
       <div class="container">
-        <figure>
-            <h3>I have always loved that collision point of nature with the desire to create art.</h3>
-            <figcaption>— Frances Mayes</figcaption>
+        <figure class="col-sm-12 col-md-7">
+            <h3>"I have always loved that collision point <br> of nature with the desire to create art."</h3>
+            <figcaption>
+                <h6>— Frances Mayes</h6>
+            </figcaption>
         </figure>
       </div>
     </section>
@@ -206,7 +208,22 @@
 
 
     <footer>
-        
+        <h6>gwenfrankton@icloud.com</h6>
+        <div class="social-media">
+            <div>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <h5>Facebook</h5>
+            </div>
+            <div>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <h5>Twitter</h5>
+            </div>
+            <div>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <h5>Instagram</h5>
+            </div>
+        </div>
+        <h6 class="copyright">© Gwen Frankton 2017</h6>
     </footer>
   
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
