--- a/index.html
+++ b/index.html
@@ -56,104 +56,167 @@
 
     <!-- Portfolio Section-->
     
-    <section>
-        <img class="img-fluid" src="http://via.placeholder.com/500x300">
+    <section class="container">
         <!-- Accordion Menu-->
         <div class="myAcc">
-            <div class="card">
-                <div class="card-header portfolio-snippets">
-                    <div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
+                </div>
+                <div class="hidden-sm-down offset-md-2 col-md-4">
+                    <h2>Trees</h2>
+                    <ul>
+                        <li>Nuit Blanche</li>
+                        <li>Conservation Area</li>
+                        <li>Strife</li>
+                        <li>Meadow</li>
+                        <li>Marked with an X</li>
+                        <li>Trees in Flood</li>
+                    </ul>
+                </div>
+                <div class="card col-sm-12 hidden-md-up">
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
+                                <h3 class="card-p">Trees</h3>
+                            </a>
+                        </div>
                         <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                            <h3 class="card-p">Trees</h3>
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
                         </a>
                     </div>
-                    <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <div id="c1" class="collapse">
-                    <div class="card-block">
-                        <ul>
-                            <li>Nuit Blanche</li>
-                            <li>Conservation Area</li>
-                            <li>Strife</li>
-                            <li>Meadow</li>
-                            <li>Marked with an X</li>
-                            <li>Trees in Flood</li>
-                        </ul>
-                    </div> 
+                    <div id="c1" class="collapse">
+                        <div class="card-block">
+                            <ul>
+                                <li>Nuit Blanche</li>
+                                <li>Conservation Area</li>
+                                <li>Strife</li>
+                                <li>Meadow</li>
+                                <li>Marked with an X</li>
+                                <li>Trees in Flood</li>
+                            </ul>
+                        </div> 
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header portfolio-snippets">
-                    <div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
+                </div>
+                <div class="hidden-sm-down offset-md-2 col-md-4">
+                    <h2>Water</h2>
+                    <ul>
+                        <li>Nuit Blanche</li>
+                        <li>Conservation Area</li>
+                        <li>Strife</li>
+                        <li>Meadow</li>
+                        <li>Marked with an X</li>
+                        <li>Trees in Flood</li>
+                    </ul>
+                </div>
+                <div class="card col-sm-12 hidden-md-up">
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
+                                <h3 class="card-p">Water</h3>
+                            </a>
+                        </div>
                         <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                            <h3 class="card-p">Water</h3>
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
                         </a>
                     </div>
-                    <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <div id="c2" class="collapse">
-                    <div class="card-block">
-                        <ul>
-                            <li>Nuit Blanche</li>
-                            <li>Conservation Area</li>
-                            <li>Strife</li>
-                            <li>Meadow</li>
-                            <li>Marked with an X</li>
-                            <li>Trees in Flood</li>
-                        </ul>
-                    </div> 
+                    <div id="c2" class="collapse">
+                        <div class="card-block">
+                            <ul>
+                                <li>Nuit Blanche</li>
+                                <li>Conservation Area</li>
+                                <li>Strife</li>
+                                <li>Meadow</li>
+                                <li>Marked with an X</li>
+                                <li>Trees in Flood</li>
+                            </ul>
+                        </div> 
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header portfolio-snippets">
-                    <div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
+                </div>
+                <div class="hidden-sm-down offset-md-2 col-md-4">
+                    <h2>Arctic</h2>
+                    <ul>
+                        <li>Nuit Blanche</li>
+                        <li>Conservation Area</li>
+                        <li>Strife</li>
+                        <li>Meadow</li>
+                        <li>Marked with an X</li>
+                        <li>Trees in Flood</li>
+                    </ul>
+                </div>
+                <div class="card col-sm-12 hidden-md-up">
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
+                                <h3 class="card-p">Arctic</h3>
+                            </a>
+                        </div>
                         <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                            <h3 class="card-p">Arctic</h3>
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
                         </a>
                     </div>
-                    <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <div id="c3" class="collapse">
-                    <div class="card-block">
-                        <ul>
-                            <li>Nuit Blanche</li>
-                            <li>Conservation Area</li>
-                            <li>Strife</li>
-                            <li>Meadow</li>
-                            <li>Marked with an X</li>
-                            <li>Trees in Flood</li>
-                        </ul>
-                    </div> 
+                    <div id="c3" class="collapse">
+                        <div class="card-block">
+                            <ul>
+                                <li>Nuit Blanche</li>
+                                <li>Conservation Area</li>
+                                <li>Strife</li>
+                                <li>Meadow</li>
+                                <li>Marked with an X</li>
+                                <li>Trees in Flood</li>
+                            </ul>
+                        </div> 
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header portfolio-snippets">
-                    <div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
+                </div>
+                <div class="hidden-sm-down offset-md-2 col-md-4">
+                    <h2>Forest Floor</h2>
+                    <ul>
+                        <li>Nuit Blanche</li>
+                        <li>Conservation Area</li>
+                        <li>Strife</li>
+                        <li>Meadow</li>
+                        <li>Marked with an X</li>
+                        <li>Trees in Flood</li>
+                    </ul>
+                </div>
+                <div class="card col-sm-12 hidden-md-up">
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
+                                <h3 class="card-p">Forest Floor</h3>
+                            </a>
+                        </div>
                         <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                            <h3 class="card-p">Forest Floor</h3>
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
                         </a>
                     </div>
-                    <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <div id="c4" class="collapse">
-                    <div class="card-block">
-                        <ul>
-                            <li>Nuit Blanche</li>
-                            <li>Conservation Area</li>
-                            <li>Strife</li>
-                            <li>Meadow</li>
-                            <li>Marked with an X</li>
-                            <li>Trees in Flood</li>
-                        </ul>
-                    </div> 
+                    <div id="c4" class="collapse">
+                        <div class="card-block">
+                            <ul>
+                                <li>Nuit Blanche</li>
+                                <li>Conservation Area</li>
+                                <li>Strife</li>
+                                <li>Meadow</li>
+                                <li>Marked with an X</li>
+                                <li>Trees in Flood</li>
+                            </ul>
+                        </div> 
+                    </div>
                 </div>
             </div>
         </div>
