--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
     <!-- Portfolio Section-->
     
-    <section class="container">
+    <section class="portfolio">
         <!-- Accordion Menu-->
-        <div class="myAcc">
+        <div class="myAcc container">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
