feat(html, css): create secondary menu

--- a/blog.html
+++ b/blog.html
@@ -19,16 +19,12 @@
   </head>
   <body>
 
-    <!-- Navigation -->
+<!-- Collection Navigation -->
 
-    <nav class="navbar navbar-toggleable-sm navbar-light bg-faded fixed-top main-nav">
+<!--     <nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top collection-nav">
         <div class="container collapse-nav">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand hidden-md-up" href="index.html">Gwen</a>
-          <div class="collapse navbar-collapse nav-flexbox" id="navbarNav">
-            <ul class="navbar-nav hidden-md-up">
+          <div class="collapse navbar-collapse" id="navbarNav1">
+            <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
@@ -40,6 +36,35 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav> -->
+
+    <!-- Navigation -->
+
+    <!-- Navigation -->
+
+    <nav class="navbar navbar-toggleable-sm navbar-light bg-faded fixed-top main-nav">
+        <div class="container collapse-nav">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand hidden-md-up" href="index.html">Gwen</a>
+          <div class="collapse navbar-collapse nav-flexbox" id="navbarNav">
+            <ul class="navbar-nav hidden-md-up">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Water <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Trees</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blog.html">Arctic</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Forest Floor</a>
               </li>
             </ul>
             <ul class="navbar-nav hidden-sm-down flex-nav-1">
