feat(html, css): add portfolio project image and text

--- a/blog.html
+++ b/blog.html
@@ -84,16 +84,16 @@
           <div class="collapse navbar-collapse" id="navbarNav2">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Water <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Project 1 <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Trees</a>
+                <a class="nav-link" href="#">Project 2</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Arctic</a>
+                <a class="nav-link" href="blog.html">Project 3</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Forest Floor</a>
+                <a class="nav-link" href="#">Project 4</a>
               </li>
             </ul>
           </div>
@@ -102,167 +102,15 @@
 
     <!-- Portfolio Section-->
     
-    <section class="portfolio">
-        <!-- Accordion Menu-->
-        <div class="myAcc container">
+    <section class="portfolio projects">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
                 </div>
-                <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Trees</h2>
-                    <ul>
-                        <li>Nuit Blanche</li>
-                        <li>Conservation Area</li>
-                        <li>Strife</li>
-                        <li>Meadow</li>
-                        <li>Marked with an X</li>
-                        <li>Trees in Flood</li>
-                    </ul>
-                </div>
-                <div class="card col-sm-12 hidden-md-up">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                                <h3 class="card-p">Trees</h3>
-                            </a>
-                        </div>
-                        <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div id="c1" class="collapse">
-                        <div class="card-block">
-                            <ul>
-                                <li>Nuit Blanche</li>
-                                <li>Conservation Area</li>
-                                <li>Strife</li>
-                                <li>Meadow</li>
-                                <li>Marked with an X</li>
-                                <li>Trees in Flood</li>
-                            </ul>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
-                </div>
-                <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Water</h2>
-                    <ul>
-                        <li>Nuit Blanche</li>
-                        <li>Conservation Area</li>
-                        <li>Strife</li>
-                        <li>Meadow</li>
-                        <li>Marked with an X</li>
-                        <li>Trees in Flood</li>
-                    </ul>
-                </div>
-                <div class="card col-sm-12 hidden-md-up">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                                <h3 class="card-p">Water</h3>
-                            </a>
-                        </div>
-                        <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div id="c2" class="collapse">
-                        <div class="card-block">
-                            <ul>
-                                <li>Nuit Blanche</li>
-                                <li>Conservation Area</li>
-                                <li>Strife</li>
-                                <li>Meadow</li>
-                                <li>Marked with an X</li>
-                                <li>Trees in Flood</li>
-                            </ul>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
-                </div>
-                <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Arctic</h2>
-                    <ul>
-                        <li>Nuit Blanche</li>
-                        <li>Conservation Area</li>
-                        <li>Strife</li>
-                        <li>Meadow</li>
-                        <li>Marked with an X</li>
-                        <li>Trees in Flood</li>
-                    </ul>
-                </div>
-                <div class="card col-sm-12 hidden-md-up">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                                <h3 class="card-p">Arctic</h3>
-                            </a>
-                        </div>
-                        <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div id="c3" class="collapse">
-                        <div class="card-block">
-                            <ul>
-                                <li>Nuit Blanche</li>
-                                <li>Conservation Area</li>
-                                <li>Strife</li>
-                                <li>Meadow</li>
-                                <li>Marked with an X</li>
-                                <li>Trees in Flood</li>
-                            </ul>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
-                </div>
-                <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Forest Floor</h2>
-                    <ul>
-                        <li>Nuit Blanche</li>
-                        <li>Conservation Area</li>
-                        <li>Strife</li>
-                        <li>Meadow</li>
-                        <li>Marked with an X</li>
-                        <li>Trees in Flood</li>
-                    </ul>
-                </div>
-                <div class="card col-sm-12 hidden-md-up">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                                <h3 class="card-p">Forest Floor</h3>
-                            </a>
-                        </div>
-                        <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div id="c4" class="collapse">
-                        <div class="card-block">
-                            <ul>
-                                <li>Nuit Blanche</li>
-                                <li>Conservation Area</li>
-                                <li>Strife</li>
-                                <li>Meadow</li>
-                                <li>Marked with an X</li>
-                                <li>Trees in Flood</li>
-                            </ul>
-                        </div> 
-                    </div>
+                <div class="col-sm-12 offset-lg-1 col-lg-10 offset-lg-1 p-text">
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p> 
+                    <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
         </div>
