feat(html, css): add collection images and captions

--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
     <!-- Collection Section -->
     
     <section class="collection-section">
-        <div class="collection-intro">
+        <div class="collection-intro container">
             <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
             <h5>Collection</h5>
             <h2>Brief introductory sentence about the collection etc</h2>
@@ -105,20 +105,49 @@
     <section class="portfolio projects">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/800x450">
-                </div>
+                <figure class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/1400x500">
+                    <figcaption>
+                        <h6>Photo Caption</h6>
+                    </figcaption>
+                </figure>
                 <div class="col-sm-12 offset-lg-1 col-lg-10 offset-lg-1 p-text">
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p> 
                     <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 </div>
+            </div>
+            <div class="row">
+                <figure class="col-sm-12 col-lg-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/750x500">
+                    <figcaption>
+                        <h6>Photo Caption</h6>
+                    </figcaption>
+                </figure>
+                <figure class="col-sm-12 col-lg-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/750x500">
+                    <figcaption>
+                        <h6>Photo Caption</h6>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 offset-lg-1 col-lg-10 offset-lg-1">
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p> 
+                    <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui ofcia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere</p>
+                </div>
+                <figure class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/1400x500">
+                    <figcaption>
+                        <h6>Photo Caption</h6>
+                    </figcaption>
+                </figure>
             </div>
         </div>
     </section>
 
     <!-- Fundraising Section-->
 
-    <section class="fundraising container">
+<!--     <section class="fundraising container">
         <div class="row">
             <div class="col-sm-12 col-lg-3 border-right">
                 <h2>Fundraising</h2>
@@ -133,11 +162,11 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Quote-->
 
-    <section class="jumbotron jumbotron-fluid quote-img">
+<!--     <section class="jumbotron jumbotron-fluid quote-img">
       <div class="container">
         <figure class="col-sm-12 col-md-7">
             <h3>"I have always loved that collision point <br> of nature with the desire to create art."</h3>
@@ -146,11 +175,11 @@
             </figcaption>
         </figure>
       </div>
-    </section>
+    </section> -->
 
     <!-- About Gwen -->
 
-    <section class="container about">
+<!--     <section class="container about">
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
@@ -161,7 +190,7 @@
                 <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <footer>
