feat(html, css): add collection project posts

--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
     <section class="collection-section">
         <div class="collection-intro container">
             <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
-            <h5>Collection</h5>
+            <h5>Collection Name</h5>
             <h2>Brief introductory sentence about the collection etc</h2>
         </div>
     </section>
@@ -143,6 +143,40 @@
                 </figure>
             </div>
         </div>
+    </section>
+
+    <!-- Portfolio Posts-->
+
+    <section class="container portfolio-posts">
+        <div class="row">
+            <div class="col-sm-12">
+                <h6>Related Posts</h6>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                <div class="collection-post-text">
+                    <h3><a href="#">Title of Post</a></h3>
+                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                <div class="collection-post-text">
+                    <h3><a href="#">Title of Post</a></h3>
+                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+            <div class="col-sm-12 post-md-hidden col-lg-4">
+                <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                <div class="collection-post-text">
+                    <h3><a href="#">Title of Post</a></h3>
+                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+        </div>
+      
     </section>
 
     <!-- Fundraising Section-->
