feat(html, css): create bibliography section

--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
         </div>
     </nav>
 
-    <!-- Portfolio Section-->
+    <!-- Collection Projects-->
     
     <section class="portfolio projects">
         <div class="container">
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <!-- Portfolio Posts-->
+    <!-- Collection Project Posts-->
 
     <section class="container portfolio-posts">
         <div class="row">
@@ -176,7 +176,69 @@
                 </div>
             </div>
         </div>
-      
+    </section>
+
+    <!-- Bibliography-->
+
+    <section class="container bibliography">
+        <!-- Accordion Menu-->
+        <div class="myAcc container">
+            <div class="row">
+                <div class="col-sm-12 col-lg-3">
+                    <h5>Collection Bibliography</h5>
+                </div>
+                <div class="col-sm-12 offset-lg-1 col-lg-7">
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
+                                <h6 class="card-p">Bibliography Entry</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="c1" class="collapse">
+                        <div class="card-block">
+                            <p>Supported Initiative with a very extensively long name</p>
+                        </div> 
+                    </div>
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
+                                <h6 class="card-p">Bibliography Entry</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="c2" class="collapse">
+                        <div class="card-block">
+                            <p>Supported Initiative with a very extensively long name</p>
+                        </div> 
+                    </div>
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
+                                <h6 class="card-p">Bibliography Entry</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="c3" class="collapse">
+                        <div class="card-block">
+                            <p>Supported Initiative with a very extensively long name</p>
+                        </div> 
+                    </div>
+                    <div class="card-header portfolio-snippets">
+                        <div>
+                            <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
+                                <h6 class="card-p">Bibliography Entry</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="c4" class="collapse">
+                        <div class="card-block">
+                            <p>Supported Initiative with a very extensively long name</p>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Fundraising Section-->
