feat(html, css): create blog page and sort out navigation

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
                 </div>
                 <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Trees</h2>
+                    <a href="collection.html">
+                        <h2>Trees</h2>
+                    </a>
                     <ul>
                         <li>Nuit Blanche</li>
                         <li>Conservation Area</li>
@@ -123,7 +125,9 @@
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
                 </div>
                 <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Water</h2>
+                    <a href="collection.html">
+                        <h2>Water</h2>
+                    </a>
                     <ul>
                         <li>Nuit Blanche</li>
                         <li>Conservation Area</li>
@@ -163,7 +167,9 @@
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
                 </div>
                 <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Arctic</h2>
+                    <a href="collection.html">
+                        <h2>Arctic</h2>
+                    </a>
                     <ul>
                         <li>Nuit Blanche</li>
                         <li>Conservation Area</li>
@@ -203,7 +209,9 @@
                     <img class="img-fluid" src="http://via.placeholder.com/800x450">
                 </div>
                 <div class="hidden-sm-down offset-md-1 col-md-5">
-                    <h2>Forest Floor</h2>
+                    <a href="collection.html">
+                        <h2>Forest Floor</h2>
+                    </a>
                     <ul>
                         <li>Nuit Blanche</li>
                         <li>Conservation Area</li>
