--- a/blog.html
+++ b/blog.html
@@ -63,231 +63,45 @@
         </div>
     </nav>
 
-    <!-- Collection Section -->
+    <!-- Blog Section -->
     
     <section class="collection-section">
         <div class="collection-intro container">
             <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
-            <h5>Collection Name</h5>
-            <h2>Brief introductory sentence about the collection etc</h2>
+            <span class="blog-title-border"></span>
+            <h5>Gwen's Blog</h5>
+            <h2>Introductory sentence to the blog of Gwen Frankton</h2>
         </div>
     </section>
 
-    <!-- Portfolio Dropdown -->
+    <!-- Blog Posts -->
 
-    <nav class="navbar navbar-light bg-faded portfolio-drop-down">
-        <div class="container collapse-nav">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa fa-arrow-down"></span>
-          </button>
-          <h5>Project Name</h5>
-          <div class="collapse navbar-collapse" id="navbarNav2">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Project 1 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Project 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Project 3</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Project 4</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-
-    <!-- Collection Projects-->
-    
-    <section class="portfolio projects">
+    <section class="blog-posts">
         <div class="container">
             <div class="row">
-                <figure class="col-sm-12">
-                    <img class="img-fluid" src="http://via.placeholder.com/1400x500">
-                    <figcaption>
-                        <h6>Photo Caption</h6>
-                    </figcaption>
-                </figure>
-                <div class="col-sm-12 offset-lg-1 col-lg-10 offset-lg-1 p-text">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p> 
-                    <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                <div class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                    <h6 class="blog-post-date">01.05.17</h6>
+                    <h6>Blog Post Title</h6>
+                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
-            </div>
-            <div class="row">
-                <figure class="col-sm-12 col-lg-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/750x500">
-                    <figcaption>
-                        <h6>Photo Caption</h6>
-                    </figcaption>
-                </figure>
-                <figure class="col-sm-12 col-lg-6">
-                    <img class="img-fluid" src="http://via.placeholder.com/750x500">
-                    <figcaption>
-                        <h6>Photo Caption</h6>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 offset-lg-1 col-lg-10 offset-lg-1">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p> 
-                    <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui ofcia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere</p>
+                <div class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                    <h6 class="blog-post-date">01.05.17</h6>
+                    <h6>Blog Post Title</h6>
+                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
-                <figure class="col-sm-12">
-                    <img class="img-fluid" src="http://via.placeholder.com/1400x500">
-                    <figcaption>
-                        <h6>Photo Caption</h6>
-                    </figcaption>
-                </figure>
-            </div>
-        </div>
-    </section>
-
-    <!-- Collection Project Posts-->
-
-    <section class="container portfolio-posts">
-        <div class="row">
-            <div class="col-sm-12">
-                <h6>Related Posts</h6>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                </div>
-            </div>
-            <div class="col-sm-12 post-md-hidden col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <div class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                    <h6 class="blog-post-date">01.05.17</h6>
+                    <h6>Blog Post Title</h6>
+                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Bibliography-->
-
-    <section class="container bibliography">
-        <!-- Accordion Menu-->
-        <div class="myAcc container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Collection Bibliography</h5>
-                </div>
-                <div class="col-sm-12 offset-lg-1 col-lg-7">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="c1" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="c2" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="c3" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="c4" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Fundraising Section-->
-
-<!--     <section class="fundraising container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-3 border-right">
-                <h2>Fundraising</h2>
-            </div>
-            <div class="col-sm-12 offset-lg-1 col-lg-8">
-                <h3>I support ecological causes through my work wherever possible. Causes dear to my heart are:</h3>
-                <ul>
-                    <li><a href="#">The Ottawa Riverkeeper</a></li>
-                    <li><a href="#">Tree Ottawa</a></li>
-                    <li><a href="#">The Nature Conservative of Canada</a></li>
-                    <li><a href="#">The Mississippi Madawaska Land Trust</a></li>
-                </ul>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Quote-->
-
-<!--     <section class="jumbotron jumbotron-fluid quote-img">
-      <div class="container">
-        <figure class="col-sm-12 col-md-7">
-            <h3>"I have always loved that collision point <br> of nature with the desire to create art."</h3>
-            <figcaption>
-                <h6>— Frances Mayes</h6>
-            </figcaption>
-        </figure>
-      </div>
-    </section> -->
-
-    <!-- About Gwen -->
-
-<!--     <section class="container about">
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
-            </div>
-            <div class="col-sm-12 col-md-6">
-                <h2>About Gwen</h2>
-                <p>I am an eco-artist, a chronicler of the natural world. I believe making art that calls forth the viewer’s deepest memories connected with water, land, sky, and forest is my highest calling.</p>  
-                <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
-            </div>
-        </div>
-    </section> -->
-
+    <!-- Footer -->
 
     <footer>
         <h6>gwenfrankton@icloud.com</h6>
