--- a/collection.html
+++ b/collection.html
@@ -241,53 +241,7 @@
         </div>
     </section>
 
-    <!-- Fundraising Section-->
-
-<!--     <section class="fundraising container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-3 border-right">
-                <h2>Fundraising</h2>
-            </div>
-            <div class="col-sm-12 offset-lg-1 col-lg-8">
-                <h3>I support ecological causes through my work wherever possible. Causes dear to my heart are:</h3>
-                <ul>
-                    <li><a href="#">The Ottawa Riverkeeper</a></li>
-                    <li><a href="#">Tree Ottawa</a></li>
-                    <li><a href="#">The Nature Conservative of Canada</a></li>
-                    <li><a href="#">The Mississippi Madawaska Land Trust</a></li>
-                </ul>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Quote-->
-
-<!--     <section class="jumbotron jumbotron-fluid quote-img">
-      <div class="container">
-        <figure class="col-sm-12 col-md-7">
-            <h3>"I have always loved that collision point <br> of nature with the desire to create art."</h3>
-            <figcaption>
-                <h6>— Frances Mayes</h6>
-            </figcaption>
-        </figure>
-      </div>
-    </section> -->
-
-    <!-- About Gwen -->
-
-<!--     <section class="container about">
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
-            </div>
-            <div class="col-sm-12 col-md-6">
-                <h2>About Gwen</h2>
-                <p>I am an eco-artist, a chronicler of the natural world. I believe making art that calls forth the viewer’s deepest memories connected with water, land, sky, and forest is my highest calling.</p>  
-                <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
-            </div>
-        </div>
-    </section> -->
-
+    <!-- Footer -->
 
     <footer>
         <h6>gwenfrankton@icloud.com</h6>
